--- a/index.html
+++ b/index.html
@@ -347,13 +347,25 @@ At Puurfect Spa, we promise to treat your cats as if they were our own,
   
   
   
-  </section>
+ 
 
 
 <!--Top Button-->
 <button onclick="topFunction()" id="myBtn" title="Go to top">Top
 </button>
 
+
+        
+<!--Footer-->
+<footer class="p-5 bg-dark text-white text-center position-relative">
+  <div class="container">
+    <p class="lead">Copyright &copy; 2023 PuurfectSpa</p>
+
+    <a href="#" class="position-absolute bottom-0 end-0 p-5">
+      <i class="bi bi-arrow-up-circle h1"></i>
+    </a>
+  </div>
+</footer>
 
 
 </body>
